fix: fix home page on smaller screen sizes

--- a/portal/static/portal/sass/partials/_banners.scss
+++ b/portal/static/portal/sass/partials/_banners.scss
@@ -163,6 +163,20 @@
   background-position: top left;
 }
 
+.banner-home-content {
+  display: table;
+
+  .banner-home-text {
+    float: left;
+    display: table-cell;
+  }
+
+  .banner-home-button {
+    display: table-cell;
+    vertical-align: bottom;
+  }
+}
+
 .banner--game {
   @include _margin(8 * $spacing, auto, 0px, auto);
   @include _padding(15 * $spacing, 4 * $spacing, 15 * $spacing, 4 * $spacing);
@@ -362,6 +376,10 @@
   }
 }
 
+.banner__item {
+  text-align: center;
+}
+
 @media (max-width: $tablet-large-max-width) {
   .banner {
     .col-sm-offset-2 {
@@ -370,14 +388,22 @@
   }
 
   .banner--homepage {
-    .col-sm-7 {
+    @include _padding(50px, 0px, 50px, 10px);
+    .col-sm-11 {
       width: 100%;
     }
   }
-}
 
-.banner__item {
-  text-align: center;
+  .banner-home-content {
+    .banner-home-text {
+      display: block;
+    }
+
+    .banner-home-button {
+      float: right;
+      margin-top: 20px;
+    }
+  }
 }
 
 @media (min-width: $tablet-small-min-width) {
@@ -396,7 +422,7 @@
 
 @media (max-width: $mobile-max-width) {
   .banner--homepage {
-    @include _padding(50px, 0px, 50px, 10px);
+    @include _padding(30px, 0px, 20px, 10px);
   }
 
   .banner {
